<resources>
    <string name="app_name">Group11</string>
    <string name="action_settings">Settings</string>
    <string name="play">PLAY</string>
    <string name="credits">CREDITS</string>
    <string name="profiles">PROFILES</string>
    <string name="title_activity_credits">Credits</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="title_activity_select_players">Select Players</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_play_game">Game</string>
    <string name="background_music">BACKGROUND MUSIC</string>
    <string name="options">OPTIONS</string>
    <string name="title_activity_add_profile">Add Profile</string>
    <string name="title_activity_view_profile_list">Profiles List</string>
    <string name="title_activity_view_profile_statistics">Profile</string>
    <string name="title_activity_choose_player_type">Choose Player</string>
    <string name="title_activity_view_profiles_selection">Select your Profile</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_view_profile_leaderboard">Profile</string>
    <string name="title_activity_create_match">CreateMatch</string>
    <string name="title_activity_view_match_statistics">Match Statistics</string>
    <string name="new_profile">NEW PROFILE</string>
    <string name="existing_profile">EXISTING PROFILES</string>
    <string name="artificial_intelligence">COMPUTER</string>
    <string name="commit_changes">almeno faccio accept theirs</string>
    <string name="save">save</string>
    <string name="profile_name">Mario</string>
    <string name="delete_profile_button">delete</string>
    <string name="dialog_confirm_delete">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="title_activity_choose_match_type">ChooseMatchType</string>
    <string name="title_activity_make_your_bars">MakeYourBarsActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
