<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="goToSelectPlayers"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/credits_button"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:onClick="goToCredits"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profiles"
        android:id="@+id/profiles_button"
        android:layout_below="@+id/credits_button"
        android:layout_alignLeft="@+id/credits_button"
        android:layout_alignStart="@+id/credits_button"
        android:layout_marginTop="29dp"
        android:onClick="goToViewProfileList"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:id="@+id/leaderboard_button"
        android:layout_below="@+id/profiles_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="goToLeaderboard"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/options_button"
        android:layout_below="@+id/leaderboard_button"
        android:layout_centerHorizontal="true"
        android:onClick="goToOptions"/>

</RelativeLayout>
