<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.polimi.group11.ChoosePlayerTypeActivity"
    tools:showIn="@layout/activity_choose_player_type">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_profile"
        android:id="@+id/new_profile_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="goToAddProfile" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_profile"
        android:id="@+id/existing_profile_button"
        android:layout_below="@+id/new_profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:onClick="goToViewProfilesSelection"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artificial_intelligence"
        android:id="@+id/artificial_intelligence_button"
        android:layout_below="@+id/existing_profile_button"
        android:layout_marginTop="29dp"
        android:onClick="goToArtificialIntelligence"/>

</RelativeLayout>
